Feat: create gateway for engine