@@ -1,14 +1,19 @@
 package edu.ntnu.idatt2003.gateway;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.file.Path;
 import java.time.LocalDate;
 import java.util.*;
 import java.util.stream.Collectors;
 
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+
 import edu.games.engine.*;
 import edu.ntnu.idatt2003.ui.OverlayParams;
-import edu.ntnu.idatt2003.utils.CsvPlayerHandler;
+import edu.ntnu.idatt2003.utils.BoardAdapter;
+import edu.ntnu.idatt2003.utils.PlayerCsv;
 import edu.ntnu.idatt2003.utils.ResourcePaths;
 
 public final class SnlGateway implements GameGateway {
@@ -19,7 +24,9 @@ public final class SnlGateway implements GameGateway {
           "BLUE",Token.BLUE, "GREEN",Token.GREEN, "YELLOW",Token.YELLOW,
           "RED",Token.RED,   "PURPLE",Token.PURPLE);
 
-  private final CsvPlayerHandler csv = new CsvPlayerHandler();
+  private static final ObjectMapper MAPPER = new ObjectMapper();
+
+  private final Map<Integer, List<OverlayParams>> overlayCache = new HashMap<>();
 
   /* ---------- set-up ---------- */
 
@@ -30,10 +37,19 @@ public final class SnlGateway implements GameGateway {
     game = new DefaultGame(board, ruleEngine, new ArrayList<>(), 2);
   }
 
-  @Override 
+  @Override
+  public void newGame(BoardAdapter.MapData data) {
+    LinearBoard board = new LinearBoard(data.size());
+    RuleEngine  rules = new SnlRuleEngine(data.snakes(), data.ladders());
+    game = new DefaultGame(board, rules, new ArrayList<>(), 2);
+}
+
+  @Override
   public void addPlayer(String name, String token, LocalDate birthday) {
     Objects.requireNonNull(game,"call newGame first");
-    game.players().add(new Player(name, tokenMap.get(token), birthday));
+    Player newPlayer = new Player(name, tokenMap.get(token), birthday);
+    newPlayer.moveTo(game.board().start()); // Set player on first tile
+    game.players().add(newPlayer);
   }
 
   @Override 
@@ -43,14 +59,12 @@ public final class SnlGateway implements GameGateway {
 
   @Override 
   public void savePlayers(Path out) throws IOException {
-    List<edu.ntnu.idatt2003.models.Player> tmp =
-        game.players().stream()
-            .map(p -> new edu.ntnu.idatt2003.models.Player(
-                    p.getName(),
-                    edu.ntnu.idatt2003.models.PlayerTokens.valueOf(p.getToken().name()),
-                    p.getBirtday()))
-            .toList();
-    csv.save(tmp, out);
+    List<String[]> rows = game.players().stream()
+        .map(p -> new String[]{ p.getName(),
+                                p.getToken().name(),
+                                p.getBirtday().toString() })
+        .toList();
+    PlayerCsv.save(rows, out);
   }
 
   /* ---------- play ---------- */
@@ -80,24 +94,30 @@ public final class SnlGateway implements GameGateway {
 
   @Override 
   public List<OverlayParams> boardOverlays() {
-    // existing util already reads JSON into OverlayParams
-    return new edu.ntnu.idatt2003.ui.BoardView(null).loadOverlaysFromJson();
+    int size = boardSize();
+        return overlayCache.computeIfAbsent(size, this::loadOverlays);
   }
 
-  @Override 
+  @Override
   public List<PlayerView> players() {
+    if (game.players().isEmpty()) {
+      return List.of();
+    }
+
     Token turnToken = game.currentPlayer().getToken();
+
     return game.players().stream()
-          .map(p -> new PlayerView(p.getName(),
-                                   p.getToken().name(),
-                                   p.getCurrentTile().id(),
-                                   p.getToken()==turnToken))
-          .collect(Collectors.toList());
+            .map(p -> new PlayerView(p.getName(),
+                                    p.getToken().name(),
+                                    p.getCurrentTile().id(),
+                                    p.getBirtday(),
+                                    p.getToken() == turnToken))
+            .toList();
   }
 
   /* ---------- static helpers ---------- */
 
-  private static Map<Integer,Integer> snakes(int size) {          // tiny demo
+  private static Map<Integer,Integer> snakes(int size) {
     return size==64 ? Map.of(47,26, 62,18)
          :            Map.of(87,24, 73,15);
   }
@@ -105,5 +125,40 @@ public final class SnlGateway implements GameGateway {
   private static Map<Integer,Integer> ladders(int size) {
     return size==64 ? Map.of(4,14, 22,33)
          :            Map.of(11,29, 40,68);
+  }
+
+  private List<OverlayParams> loadOverlays(int size) {
+        /* choose file based on size ------------------------------------------------------- */
+        String resource;
+        switch (size) {
+            case 64  -> resource = "/overlays/overlays64.json";
+            case 90  -> resource = "/overlays/overlays90.json";
+            case 120 -> resource = "/overlays/overlays120.json";
+            default  -> { return List.of(); }   // no overlays for custom sizes
+        }
+
+        try (InputStream in = getClass().getResourceAsStream(resource)) {
+            if (in == null) {
+                System.err.println("Overlay file not found: " + resource);
+                return List.of();
+            }
+
+            /* parse ---------------------------------------------------------------------- */
+            JsonNode root = MAPPER.readTree(in);
+            List<OverlayParams> list = new ArrayList<>();
+            for (JsonNode n : root) {
+                list.add(new OverlayParams(
+                        n.get("image").asText(),
+                        n.get("dx").asDouble(),
+                        n.get("dy").asDouble(),
+                        n.get("width").asDouble(),
+                        n.get("start").asInt()));
+            }
+            return List.copyOf(list);
+
+        } catch (IOException ex) {
+            ex.printStackTrace();
+            return List.of();
+        }
   }
 }
